# VanSight

./: .gitignore
VanSightDisplayClient/: deploy.sh  monitor.sh  platformio.ini  simulate.sh
VanSightDisplayClient/squareline/: VanSightDisplayClient.sll  VanSightDisplayClient.slp  VanSightDisplayClient.spj  VanSightDisplayClient.spj.backup  VanSightDisplayClient_events.py  add_events.py  debug_find.py  project.info
VanSightDisplayClient/src/: ESPNowManager.cpp  ESPNowManager.h  PanelManager.cpp  PanelManager.h  SleepManager.cpp  SleepManager.h  UIStateManager.cpp  UIStateManager.h  espnow_config.h  main.cpp  ui_event_handlers.cpp  ui_event_handlers.h
VanSightDisplaySimulator/: CMakeLists.txt  README.md  build.sh  espnow_stub.c  espnow_stub.h  lv_conf.h  lv_drv_conf.h  main.c  run.sh  ui_event_handlers.c  ui_event_handlers.h
VanSightDisplaySimulator/ui/src/: ui.c  ui.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_relaybutton.h  ui_events.h  ui_font_fasolid.c  ui_font_rubikwetpaint.c  ui_vanSightScreen.c
VanSightHub/: deploy.sh  monitor.sh  platformio.ini
VanSightHub/data/: index.html
VanSightHub/src/: BuzzerManager.cpp  BuzzerManager.h  CommandHandler.cpp  CommandHandler.h  HTTPApiHandler.cpp  HTTPApiHandler.h  LevelSensor.cpp  LevelSensor.h  RelayController.cpp  RelayController.h  SensorController.cpp  SensorController.h  config.h  main.cpp  main2.cpp
VanSightHub_Test/: README.md  platformio.ini
VanSightHub_Test/src/: main.cpp
VanSightLib/: README.md  build.sh  library.json  platformio.ini
VanSightLib/src/: VanSightLib.h  main.cpp
(+40 files in other folders)
